# re-shell

./: .gitignore  .size-limit.json  README.md  components.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: accessibility.yml  ci.yml  pages.yml  publish.yml  template-health.yml
apps/vscode-extension/: README.md  package.json  tsconfig.json  vitest.config.ts
apps/vscode-extension/scripts/: build.mjs
apps/web/: README.md  index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts  vitest.coverage.config.ts  vitest.ui.config.ts
apps/web/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: README.md
apps/web/src-tauri/src/: lib.rs  main.rs
docs/: CLI-CONTRACTS.md  README.md  RE_SHELL_MASTER_PLAN.md  RE_SHELL_ULTIMATE_PLAN.md  ROADMAP.md  control-plane.md  desktop.md
docs/design/: dashboard-design.md
docs/legacy/: CLI-CONTRACTS.old.md  architecture.md  requirements.md
experimental/: README.md
experimental/control-plane/: package.json
experimental/vscode-extension/: .vscodeignore  README.md  package.json  re-shell-0.1.0.vsix  re-shell-0.2.0.vsix  tsconfig.json  vitest.config.ts
scripts/: scaffold-test-templates.sh
site/: LANDING-V2.md  SITE-PLAN.md  astro.config.mjs  package.json
src/: index.ts
src/commands/: ui.ts
src/validators/: topology-validator.ts
tests/unit/: ui-command.test.ts
(+133 files in other folders)
